[gd_scene load_steps=15 format=2]

[ext_resource path="res://prefabs/player_demo/Player.gd" type="Script" id=1]
[ext_resource path="res://prefabs/player_demo/pistol.gd" type="Script" id=2]
[ext_resource path="res://prefabs/player_demo/pistol_base_mat.tres" type="Material" id=3]
[ext_resource path="res://prefabs/player_demo/pistol_aim.tres" type="Material" id=4]
[ext_resource path="res://prefabs/player_demo/HUD.gd" type="Script" id=5]

[sub_resource type="CubeMesh" id=1]

size = Vector3( 1, 4, 1 )

[sub_resource type="Environment" id=2]

background_mode = 1
background_color = Color( 0.027451, 0.027451, 0.0313726, 1 )
glow_enabled = true
glow_bloom = 0.04
glow_blend_mode = 0

[sub_resource type="CapsuleShape" id=3]

height = 2.0

[sub_resource type="CubeMesh" id=4]

size = Vector3( 0.2, 0.25, 1.4 )

[sub_resource type="CubeMesh" id=5]

size = Vector3( 0.12, 0.12, 0.4 )

[sub_resource type="CubeMesh" id=6]

size = Vector3( 0.1, 0.3, 0.1 )

[sub_resource type="CubeMesh" id=7]

size = Vector3( 0.01, 0.02, 0.02 )

[sub_resource type="Animation" id=8]

resource_name = "fire"
length = 0.25
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("MeshInstance:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.02, 0.07, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.221826, -0.131237 ), Vector3( 0, 0.221826, -0.114325 ), Vector3( 0, 0.221826, -0.131237 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("MeshInstance3:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.02, 0.07, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0.288564, -0.294251 ), Vector3( 0, 0.288564, -0.277339 ), Vector3( 0, 0.288564, -0.294251 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.02, 0.06, 0.12 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 7.82924, 0, 0 ), Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=9]

resource_name = "idle"

[node name="Player" type="KinematicBody"]
script = ExtResource( 1 )

[node name="mesh" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 2, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3.4, 0 )
environment = SubResource( 2 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -4.37114e-008, 1, 0, -1, -4.37114e-008, 0, 2, 0 )
shape = SubResource( 3 )

[node name="Arm" type="Position3D" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 3, 0 )

[node name="MeshInstance" type="MeshInstance" parent="Arm"]
transform = Transform( 0.990201, 0, 0.13965, 0, 1, 0, -0.13965, 0, 0.990201, 0.552027, 0, -0.652245 )
mesh = SubResource( 4 )
material/0 = null

[node name="hand" type="Position3D" parent="Arm"]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.476211, 0, -1.2715 )

[node name="pistol" type="Position3D" parent="Arm/hand"]
script = ExtResource( 2 )
fire_rate = 0.18

[node name="MeshInstance" type="MeshInstance" parent="Arm/hand/pistol"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.221826, -0.131237 )
mesh = SubResource( 5 )
material/0 = ExtResource( 3 )

[node name="MeshInstance2" type="MeshInstance" parent="Arm/hand/pistol"]
transform = Transform( 1, 0, 0, 0, 0.94957, 0.313554, 0, -0.313554, 0.94957, 0, 0.0364962, 0.014612 )
mesh = SubResource( 6 )
material/0 = ExtResource( 3 )

[node name="MeshInstance3" type="MeshInstance" parent="Arm/hand/pistol"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.288564, -0.294251 )
mesh = SubResource( 7 )
material/0 = ExtResource( 4 )

[node name="AudioEffect" type="AudioStreamPlayer" parent="Arm/hand/pistol"]

[node name="Timer" type="Timer" parent="Arm/hand/pistol"]

[node name="Gun_Barrel" type="Position3D" parent="Arm/hand/pistol"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.221385, -0.339388 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Arm/hand/pistol"]
anims/fire = SubResource( 8 )
anims/idle = SubResource( 9 )

[node name="SpotLight" type="SpotLight" parent="Arm/hand"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -0.170621 )
spot_range = 25.0

[node name="GroundRay" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
enabled = true

[node name="HUD" type="Control" parent="."]
editor/display_folded = true
anchor_top = 1.0
anchor_bottom = 1.0
margin_top = -40.0
margin_right = 40.0
script = ExtResource( 5 )

[node name="VBoxContainer" type="VBoxContainer" parent="HUD"]
margin_right = 40.0
margin_bottom = 40.0

[node name="AmmoLabel" type="Label" parent="HUD/VBoxContainer"]
margin_right = 59.0
margin_bottom = 14.0
text = "Ammo: 0"

[node name="ProgressBar" type="ProgressBar" parent="HUD/VBoxContainer"]
margin_top = 18.0
margin_right = 59.0
margin_bottom = 32.0

[node name="Tween" type="Tween" parent="HUD/VBoxContainer"]

[connection signal="s_ammo" from="Arm/hand/pistol" to="HUD" method="_on_pistol_s_ammo"]
[connection signal="s_reload" from="Arm/hand/pistol" to="HUD" method="_on_pistol_s_reload"]
[connection signal="timeout" from="Arm/hand/pistol/Timer" to="Arm/hand/pistol" method="_on_Timer_timeout"]
